# arxiv-to-ereader

./: README.md  pyproject.toml
src/arxiv_to_ereader/: __init__.py  cli.py  converter.py  epub_converter.py  parser.py  source_refs.py  styles.py
tests/: test_cli.py  test_cli_extended.py  test_epub_converter.py  test_parser.py  test_source_refs.py
