[project]
name = "arxiv2epub"
version = "0.1.0"
description = "Convert arXiv HTML papers to EPUB"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Lev" }]
keywords = ["arxiv", "epub", "ebook", "paper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
]

[project.scripts]
arxiv2epub = "arxiv_to_ereader.cli:app"

[project.urls]
Homepage = "https://github.com/Lev-Stambler/arxiv-to-ereader"
Repository = "https://github.com/Lev-Stambler/arxiv-to-ereader"
Issues = "https://github.com/Lev-Stambler/arxiv-to-ereader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_to_ereader"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=arxiv_to_ereader --cov-report=term-missing --cov-report=html --cov-fail-under=75"
markers = [
    "integration: marks tests as integration tests (require network access)",
]

[tool.coverage.run]
source = ["src/arxiv_to_ereader"]
omit = ["src/arxiv_to_ereader/web.py", "src/arxiv_to_ereader/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
